Adding rust code for and add api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,23 @@ services:
       - /app/node_modules
     working_dir: /app
     command: npm run dev
+  inference-engine:
+    container_name: inference-engine
+    build: ./inference-engine
+    ports:
+      - "4000:4000"
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - RUST_LOG=info
+    depends_on:
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 40s
+
 volumes:
   redis_data:
