Adding rust code for and add now its running

--- a/inference-engine/Dockerfile
+++ b/inference-engine/Dockerfile
@@ -3,8 +3,7 @@ WORKDIR /usr/src/app
 COPY . .
 RUN cargo build --release
 
-FROM debian:buster-slim
-FROM rust:1.70-slim
+FROM debian:bookworm-slim
 COPY --from=builder /usr/src/app/target/release/inference-engine /usr/local/bin/
 EXPOSE 4000
-CMD [ "inference-engine" ]
+CMD ["inference-engine"]
