--- a/inference-engine/Cargo.toml
+++ b/inference-engine/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "inferience-engine"
+name = "inference-engine"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 actix-web = "4"
+chrono = "0.4.42"
+env_logger = "0.11.8"
 redis = "1.0.2"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
