--- a/data-processor/Dockerfile
+++ b/data-processor/Dockerfile
@@ -1,15 +1,17 @@
-# Build stage
-FROM golang:1.21-alpine as builder
+FROM golang:1.25.5-alpine AS builder
+
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
-COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
-# Runtime stage
+COPY . .
+
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
+    go build -o main ./cmd/data-processor
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
-WORKDIR /root/
+WORKDIR /app
 COPY --from=builder /app/main .
 EXPOSE 3002
+
 CMD ["./main"]
