--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "ioredis": "^5.9.1",
     "nodemon": "^3.1.11"
   }
