--- a/inference-engine/Cargo.toml
+++ b/inference-engine/Cargo.toml
@@ -8,5 +8,7 @@ actix-web = "4"
 chrono = "0.4.42"
 env_logger = "0.11.8"
 redis = "1.0.2"
+redis_rs = "0.9.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+tch = "0.23.0"
